Bug 1523329 - Create hit test info items in BuildDisplayListForSimpleChild() if the frame is an AGR. r=mattwoodrow, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D18240

--HG--
extra : rebase_source : 2e36dd7cc1bdb3578dc872605a68860f1fe4d11b
extra : source : e0ea8e062d9f21f50522a267ce0c797e6c449896